# MediaManagerSteam

./: .gitignore  .mcp.json  ARCHITECTURE.md  CLAUDE.md  PROJECT_STATUS.md  README.md  STATUS.md  devlog.md
backend/: .env.example  README.md  alembic.ini  api.py  find_single_media_messages.py  find_text_equals_tag.py  import_bills.py  mcp_server.py  migrate_tags_to_text.py  move_tags_to_media.py  pyproject.toml  run_script.bat  schema.md  start.bat  start.sh  start_telegram.sh  test_scrapy.py
backend/alembic/: env.py
backend/alembic/versions/: 20260403_2150_2e17e07d0ec6_baseline.py  20260403_2207_0388688167b2_rename_duration_to_duration_ms.py  20260422_1036_dd558fd0f564_add_media_tag.py  20260427_1200_a1b2c3d4e5f6_add_video_preview_fields.py  20260429_1547_4d40c4acab1e_add_todo.py  (+10 more)
backend/app/: __init__.py  config.py
backend/scripts/: add_pagination_indexes.py  add_starred_to_media.py  adjust_timestamps.py  backfill_media_exif.py  bills_apply_categories.py  bills_inject_labeled.py  bills_print_month.py  bills_split_by_month.py  check_tags_consistency.py  create_new_db.py  fix_image_orientation.py  import_bilibili.py  import_favorites.py  import_flomo.py  init_data_root.py  init_notes2_db.py  migrate_data.py  migrate_tags.py  migrate_timestamp_fields.py  migrate_to_repository_format.py  migrate_todo_to_issue.py  recalculate_durations.py  recalculate_hashes.py  rename_tag.py  reorganize_uncategorized_media.py  switch_to_default_db.bat  switch_to_notes2_db.bat  telegram_sync.py  test_cursor_pagination.py  transcode_gif_previews.py  verify_migration.py
(+516 files in other folders)
